--- a/A2Dis/.settings/org.eclipse.core.resources.prefs
+++ b/A2Dis/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//assets/www/js/email.js=UTF-8
 encoding//assets/www/js/formulaire.js=UTF-8
+encoding/<project>=UTF-8
