--- a/A2Dis/AndroidManifest.xml
+++ b/A2Dis/AndroidManifest.xml
@@ -40,7 +40,8 @@
         <activity
             android:name="com.tricedesigns.hello.HelloGapActivity"
             android:label="@string/app_name" 
-    		android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"> 
+    		android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
+    		android:screenOrientation="portrait"> 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
